# interview_p26

./: .gitignore  README.md  confio
LLM/: CMakeLists.txt  README.md  flash_attention.cpp  flash_attention.py  kv_cache.cpp  kv_cache.py  paged_attention.cpp  paged_attention.py
amazon_cpp/: CMakeLists.txt  README.md
amazon_cpp/docs/: 01-对象模型与生命周期.md  02-内存指针与布局.md  03-虚函数与类型转换.md  04-STL底层原理.md  05-模板与异常.md  06-并发与内存模型.md  07-Linux系统与设计题.md  08-高频问答速查.md  09-无锁固定大小内存池.md  10-memcpy与memmove.md  11-令牌桶限流器.md  12-EC2-Nitro-Coding高频题.md  13-C++系统岗Coding与设计题全景.md
amazon_cpp/examples/: 01_rule_of_five.cpp  02_memory_placement.cpp  03_const_pointers.cpp  04_overload_resolution.cpp  05_move_forwarding.cpp  06_smart_pointers.cpp  07_virtual_vtable.cpp  08_memory_layout.cpp  09_stl_internals.cpp  10_concurrency_atomic.cpp  11_lock_free_fixed_pool.cpp  12_memmove.cpp  13_token_bucket_rate_limiter.cpp  14_aligned_malloc.cpp  15_valid_ip.cpp  16_min_heap.cpp  17_bitmap.cpp  18_event_dispatcher.cpp
docs/: 01-岗位与备考计划.md  02-PICO面试题库.md  03-算法数学公式.md  04-手撕代码指南.md  05-系统设计题与模拟面试.md  06-CV基础题详解.md  07-端侧部署题详解.md  08-影像ISP题详解.md  09-追踪交互题详解.md  10-MR感知题详解.md  11-影像方向题详解.md  12-3D人脸表情追踪详解.md  13-眼动追踪详解.md  16-Qualcomm-AI-Stack面试准备.md  17-AWS-EC2-Nitro-系统设计.md  18-具身智能大模型进展与面试准备.md  19-AWS-Nitro-MLS-面试知识点详解.md  20-Trainium-Nitro-MLS-硬核面试题库.md  21-Trainium-用户态数据面驱动架构.md  22-LLM训练计算通信重叠与MFU优化.md  23-Neuron编译运行时与数据面Lua.md  24-无锁SPSC队列与Cacheline对齐.md  25-无锁MPMC队列与CAS.md  26-Microsoft-Principal-ML-Systems面试准备.md  27-高通端侧LLM吞吐延迟功耗面试题详解.md  README.md
handsOn/: memory_pool.cpp  spsc_buffer.cpp  thread_safe_queue.cpp  vector_low_level.cpp
interview_handwrite/: CMakeLists.txt  README.md  bilinear_interp.py  bounded_blocking_queue.cpp  bounded_blocking_queue.py  conv2d.py  engineering_ds.py  kv_cache.cpp  kv_cache.py  lru_cache_ds.cpp  lru_cache_ds.py  lru_cache_raw_list.cpp  mpmc_ring_buffer.cpp  nms.py  object_pool.cpp  object_pool.py  shared_ptr.cpp  spsc_ring_buffer.cpp  spsc_ring_buffer.py  tensor_ops.py  thread_pool.cpp  thread_safe_ring_buffer.py  two_level_mempool.cpp
interview_handwrite/cpp/: CMakeLists.txt  lru_cache_ds.cpp  mpmc_ring_buffer.cpp  object_pool.cpp  spsc_ring_buffer.cpp  thread_safe_ring_buffer.cpp
leetcode/: CMakeLists.txt  README.md  binaryTree_serialize.cpp  python_core_review.py
leetcode/binary_search/: solution.cpp  solution.py
leetcode/binary_tree_level_order/: solution.cpp  solution.py
leetcode/common/: list_node.hpp  tree_node.hpp
leetcode/k_closest_points/: solution.cpp  solution.py
leetcode/longest_substring_without_repeating/: solution.cpp  solution.py
leetcode/lowest_common_ancestor/: solution.cpp  solution.py
leetcode/lru_cache/: solution.cpp  solution.py
leetcode/merge_intervals/: solution.cpp  solution.py
leetcode/merge_two_sorted_lists/: solution.cpp  solution.py
leetcode/number_of_islands/: solution.cpp  solution.py
leetcode/permutations/: solution.cpp  solution.py
leetcode/reverse_linked_list/: solution.cpp  solution.py
leetcode/search_rotated_array/: solution.cpp  solution.py
leetcode/three_sum/: solution.cpp  solution.py
leetcode/top_k_frequent/: solution.cpp  solution.py
leetcode/two_sum/: solution.cpp  solution.py
microsoft/: 01-gemm-cache-simd.md  CMakeLists.txt  README.md  gemm.cpp  gemm.py  order.cpp
openai/: 01-inference-api-platform.md  02-isolated-code-sandbox.md  03-embedded-edge-multimodal.md  04-tlm-interview-playbook.md  CMakeLists.txt  README.md  edge-collaborative-agent-runtime.md  embedded-sensor-event-loop.md  hybrid-sensor-routing.md  hybrid_sensor_routing.py  isolated-code-sandbox.md  llm-rate-limiter.md  realtime-voice-assistant.md  sandbox_orchestrator.py  semantic-cache-rag.md  semantic_cache.py  sensor_event_loop.cpp  sensor_event_loop.py  smart-glasses-ai-runtime.md  streaming-chatgpt-backend.md  streaming_chat_demo.py  tlm-embedded-4week-prep-plan.md  token_rate_limiter.py  voice_assistant_pipeline.py
(+5 files in other folders)
